--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -11,3 +11,5 @@
     include_blank: true %><br>
     <%= f.submit 'Add Building' %>
   <% end %>
+
+  <p>Don't see an owner in the list? Add them <a href="/owners/new">here.</a></p>
